# evil-bit

./: Cargo.toml  README.md
src/: bitvecto.rs  draw.rs  expr.rs  main.rs  simplify.rs
