[package]
name = "evil-bit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.2.3", features = ["derive"] }
argh = "0.1.10"
egg = "0.9.2"
image = "0.24.5"
rand = "0.8.5"
termcolor = "1.2.0"
